2002-12-13  Scott S. Goodwin  <scott@scottg.net>

	* OVERWRITE: I have taken the latest OpenACS version of their postgres
	module and overwritten the "pre-don" version. Had to take postgres.c
	and split it into nspostgres.c and .h. Updated nspostgres Makefile to
	allow compiling with the ACS flag, and to allow setting POSTGRES var
	to "LSB" which will cause the module to look for PostgreSQL libraries
	in the standard Linux locations. Lamar Owen is now primary maintainer
	of this code.

2002-09-29  Scott Goodwin  <scott@scottg.net>

	* STARTING OVER: I'm tagging the nspostgres tree as "pre-don". Don
	Baccus is going to be checking out the tree and either working
	with what I've done here, or replacing it all with the current
	version of the OpenACS postgres module. The name of the module
	will stay nspostgres.

2002-07-01  Scott S. Goodwin  <scott@scottg.net>

	* all: reset file perms to 0644 for all files except the CVS
	directory.

2002-06-02  Scott S. Goodwin  <scott@scottg.net>

	* nspostgres.c: Incorporated latest patches from the postgres
	module that the OpenACS team maintains.

	* TODO: Removed this file.

2001-12-13  Scott S. Goodwin  <scott@scottg.net>

	* TODO: added this file.

2001-12-03  Scott S. Goodwin  <scott@scottg.net>

	* nspostgres.c: Cleaned up the code comments to conform to
	AOLserver coding style. Haven't populated most of the comments yet
	:)
	
2001-09-28  Scott S. Goodwin  <scott@scottg.net>

	* nspostgres.h: Split out from nspostgres.c.

	* Makefile: Cleaned up the Makefile. Fixed a problem where libpq
	wasn't being loaded, so we'd end up with a "function not defined
	error." In the previous version of the postgres driver, the
	libpq.so is used in the EXTRA_OBJS variable. I wonder if this
	means that the libpq.so file is loaded when the nspostgres.so
	module is loaded. I'm not sure how that works. Now, libpq.a is
	being used.

2001-09-08  Scott S. Goodwin  <scott@scottg.net>

	* Makefile: Turned off FOR_ACS_USE (I'll investigate what the