@@ -47,3 +47,9 @@ Contributors to this file include:
 
 Original example driver by Jim Davidson
 
+
+DEVELOPER'S GUIDE:
+
+Run 'make help' for developer information.
+
+
